--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "tron-api-cli",
   "version": "0.0.1",
   "description": "Tron protocol client using trxplorer.io api",
-  "keywords":["tron","api","cli","trxplorer","node","js"],
+  "keywords": [
+    "tron",
+    "api",
+    "cli",
+    "trxplorer",
+    "node",
+    "js"
+  ],
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "trxplorer",
   "dependencies": {
+    "@tronprotocol/wallet-api": "git://github.com/nfleury/node-wallet-api",
     "axios": "^0.18.0",
     "google-protobuf": "^3.5.0",
-    "moment": "^2.22.1",
-    "@tronprotocol/wallet-api":"git://github.com/nfleury/node-wallet-api"
+    "jsdoc-to-markdown": "^4.0.1",
+    "moment": "^2.22.1"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.5.5"
   }
 }
