--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "trxplorer",
+  "repository": "trxplorer/tron-api-cli",
   "dependencies": {
     "@tronprotocol/wallet-api": "git://github.com/nfleury/node-wallet-api",
     "axios": "^0.18.0",
